# RPSGame

./: .gitignore  CMakeLists.txt  Main.c++  Readme.md  score_history.txt  scoreboard.txt  use-case.drawio
headers/: Main.hpp
include/: Bot.hpp  Game.hpp  Players.hpp  utils.hpp
include/header/: Bot.hpp  User_Player.hpp
source/: Bot.c++  Game.c++  Players.c++  User_Player.c++  utils.cpp
